welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:3: error: ';' expected but '=' found.
    nb:Int=0
          ^